[gd_scene load_steps=15 format=2]

[ext_resource path="res://game/GAME.gd" type="Script" id=1]
[ext_resource path="res://game/services/world_service.gd" type="Script" id=2]
[ext_resource path="res://game/services/screen_service.gd" type="Script" id=3]
[ext_resource path="res://addons/first_party/presentation/ui/ui_presentation_service.gd" type="Script" id=4]
[ext_resource path="res://game/events/events.gd" type="Script" id=5]
[ext_resource path="res://game/services/entity_service.gd" type="Script" id=6]
[ext_resource path="res://game/services/time_service.gd" type="Script" id=7]
[ext_resource path="res://game/services/camera_service.gd" type="Script" id=8]
[ext_resource path="res://game/groups/groups.gd" type="Script" id=9]
[ext_resource path="res://game/services/pause_service.gd" type="Script" id=10]
[ext_resource path="res://game/services/sound_service.gd" type="Script" id=11]
[ext_resource path="res://game/messages/messages.gd" type="Script" id=12]
[ext_resource path="res://game/services/theme_service.gd" type="Script" id=13]
[ext_resource path="res://addons/first_party/presentation/contexts/context_service.gd" type="Script" id=14]

[node name="GAME" type="Node"]
script = ExtResource( 1 )

[node name="groups" type="Node" parent="."]
script = ExtResource( 9 )

[node name="events" type="Node" parent="."]
script = ExtResource( 5 )

[node name="messages" type="Node" parent="."]
script = ExtResource( 12 )

[node name="services" type="Node" parent="."]

[node name="theme_service" type="Node" parent="services"]
script = ExtResource( 13 )

[node name="sound_service" type="Node" parent="services"]
script = ExtResource( 11 )

[node name="pause_service" type="Node" parent="services"]
pause_mode = 2
script = ExtResource( 10 )

[node name="time_service" type="Node" parent="services"]
script = ExtResource( 7 )

[node name="screen_service" type="Node" parent="services"]
script = ExtResource( 3 )

[node name="camera_service" type="Node" parent="services"]
script = ExtResource( 8 )

[node name="world_service" type="Node" parent="services"]
script = ExtResource( 2 )

[node name="entity_service" type="Node" parent="services"]
script = ExtResource( 6 )

[node name="ui_service" type="Node" parent="services"]
script = ExtResource( 4 )

[node name="context_service" type="Node" parent="services"]
script = ExtResource( 14 )
